<?xml version="1.0"?>
<package format="2">
  <name>leddar</name>
  <version>0.1.0</version>
  <description>
      Controls and communicates with Leddar sensors.
  </description>

  <maintainer email="dev@anassinator.com">Anass Al</maintainer>
  <license>GPLv2</license>
  <author email="dev@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- LeddarTech SDK dependencies -->
  <depend>qtbase5-dev</depend>
  <depend>libqt5-serialport</depend>
  <depend>libusb-dev</depend>
  <depend>libxml2</depend>

  <export> </export>
</package>
